[metadata]
name = youtube-dl-aas
version = attr: src.version.__version__
author = Giacomo Venturini
author_email = giacomo.venturini3@gmail.com
description = Youtube dl wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FlamingTuri/youtube-dl-aas
project_urls =
    Bug Tracker = https://github.com/FlamingTuri/youtube-dl-aas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src